lib/LibNotcurses.jl


function ncplane_putwc_yx(n, y, x, w)
    @ccall libnotcurses.ncplane_putwc_yx(n::Ptr{ncplane}, y::Cint, x::Cint, w::Cwchar_t)::Cint
end

function ncplane_putwc(n, w)
    @ccall libnotcurses.ncplane_putwc(n::Ptr{ncplane}, w::Cwchar_t)::Cint
end

function ncplane_putwc_utf32(n, w, wchars)
    @ccall libnotcurses.ncplane_putwc_utf32(n::Ptr{ncplane}, w::Ptr{Cwchar_t}, wchars::Ptr{Cuint})::Cint
end

function ncplane_putwc_stained(n, w)
    @ccall libnotcurses.ncplane_putwc_stained(n::Ptr{ncplane}, w::Cwchar_t)::Cint
end

function ncplane_puttext(n, y, align, text, bytes)
    @ccall libnotcurses.ncplane_puttext(n::Ptr{ncplane}, y::Cint, align::ncalign_e, text::Ptr{Cchar}, bytes::Ptr{Csize_t})::Cint
end

function ncplane_hline_interp(n, c, len, c1, c2)
    @ccall libnotcurses.ncplane_hline_interp(n::Ptr{ncplane}, c::Ptr{nccell}, len::Cuint, c1::UInt64, c2::UInt64)::Cint
end

function ncplane_hline(n, c, len)
    @ccall libnotcurses.ncplane_hline(n::Ptr{ncplane}, c::Ptr{nccell}, len::Cuint)::Cint
end

function ncplane_vline_interp(n, c, len, c1, c2)
    @ccall libnotcurses.ncplane_vline_interp(n::Ptr{ncplane}, c::Ptr{nccell}, len::Cuint, c1::UInt64, c2::UInt64)::Cint
end

function ncplane_vline(n, c, len)
    @ccall libnotcurses.ncplane_vline(n::Ptr{ncplane}, c::Ptr{nccell}, len::Cuint)::Cint
end

function ncplane_box(n, ul, ur, ll, lr, hline, vline, ystop, xstop, ctlword)
    @ccall libnotcurses.ncplane_box(n::Ptr{ncplane}, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hline::Ptr{nccell}, vline::Ptr{nccell}, ystop::Cuint, xstop::Cuint, ctlword::Cuint)::Cint
end

function ncplane_box_sized(n, ul, ur, ll, lr, hline, vline, ystop, xstop, ctlword)
    @ccall libnotcurses.ncplane_box_sized(n::Ptr{ncplane}, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hline::Ptr{nccell}, vline::Ptr{nccell}, ystop::Cuint, xstop::Cuint, ctlword::Cuint)::Cint
end

function ncplane_perimeter(n, ul, ur, ll, lr, hline, vline, ctlword)
    @ccall libnotcurses.ncplane_perimeter(n::Ptr{ncplane}, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hline::Ptr{nccell}, vline::Ptr{nccell}, ctlword::Cuint)::Cint
end

function ncplane_polyfill_yx(n, y, x, c)
    @ccall libnotcurses.ncplane_polyfill_yx(n::Ptr{ncplane}, y::Cint, x::Cint, c::Ptr{nccell})::Cint
end

function ncplane_gradient(n, y, x, ylen, xlen, egc, styles, ul, ur, ll, lr)
    @ccall libnotcurses.ncplane_gradient(n::Ptr{ncplane}, y::Cint, x::Cint, ylen::Cuint, xlen::Cuint, egc::Ptr{Cchar}, styles::UInt16, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64)::Cint
end

function ncplane_gradient2x1(n, y, x, ylen, xlen, ul, ur, ll, lr)
    @ccall libnotcurses.ncplane_gradient2x1(n::Ptr{ncplane}, y::Cint, x::Cint, ylen::Cuint, xlen::Cuint, ul::UInt32, ur::UInt32, ll::UInt32, lr::UInt32)::Cint
end

function ncplane_format(n, y, x, ylen, xlen, stylemask)
    @ccall libnotcurses.ncplane_format(n::Ptr{ncplane}, y::Cint, x::Cint, ylen::Cuint, xlen::Cuint, stylemask::UInt16)::Cint
end

function ncplane_stain(n, y, x, ylen, xlen, ul, ur, ll, lr)
    @ccall libnotcurses.ncplane_stain(n::Ptr{ncplane}, y::Cint, x::Cint, ylen::Cuint, xlen::Cuint, ul::UInt64, ur::UInt64, ll::UInt64, lr::UInt64)::Cint
end

function ncplane_mergedown_simple(src, dst)
    @ccall libnotcurses.ncplane_mergedown_simple(src::Ptr{ncplane}, dst::Ptr{ncplane})::Cint
end

function ncplane_mergedown(src, dst, begsrcy, begsrcx, leny, lenx, dsty, dstx)
    @ccall libnotcurses.ncplane_mergedown(src::Ptr{ncplane}, dst::Ptr{ncplane}, begsrcy::Cint, begsrcx::Cint, leny::Cuint, lenx::Cuint, dsty::Cint, dstx::Cint)::Cint
end

function ncplane_erase(n)
    @ccall libnotcurses.ncplane_erase(n::Ptr{ncplane})::Cvoid
end

function ncplane_erase_region(n, ystart, xstart, ylen, xlen)
    @ccall libnotcurses.ncplane_erase_region(n::Ptr{ncplane}, ystart::Cint, xstart::Cint, ylen::Cint, xlen::Cint)::Cint
end

function nccell_fg_rgb(cl)
    @ccall libnotcurses.nccell_fg_rgb(cl::Ptr{nccell})::UInt32
end

function nccell_bg_rgb(cl)
    @ccall libnotcurses.nccell_bg_rgb(cl::Ptr{nccell})::UInt32
end

function nccell_fg_alpha(cl)
    @ccall libnotcurses.nccell_fg_alpha(cl::Ptr{nccell})::UInt32
end

function nccell_bg_alpha(cl)
    @ccall libnotcurses.nccell_bg_alpha(cl::Ptr{nccell})::UInt32
end

function nccell_fg_rgb8(cl, r, g, b)
    @ccall libnotcurses.nccell_fg_rgb8(cl::Ptr{nccell}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

function nccell_bg_rgb8(cl, r, g, b)
    @ccall libnotcurses.nccell_bg_rgb8(cl::Ptr{nccell}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

function nccell_set_fg_rgb8(cl, r, g, b)
    @ccall libnotcurses.nccell_set_fg_rgb8(cl::Ptr{nccell}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

function nccell_set_fg_rgb8_clipped(cl, r, g, b)
    @ccall libnotcurses.nccell_set_fg_rgb8_clipped(cl::Ptr{nccell}, r::Cint, g::Cint, b::Cint)::Cvoid
end

function nccell_set_fg_rgb(c, channel)
    @ccall libnotcurses.nccell_set_fg_rgb(c::Ptr{nccell}, channel::UInt32)::Cint
end

function nccell_set_fg_palindex(cl, idx)
    @ccall libnotcurses.nccell_set_fg_palindex(cl::Ptr{nccell}, idx::Cint)::Cint
end

function nccell_fg_palindex(cl)
    @ccall libnotcurses.nccell_fg_palindex(cl::Ptr{nccell})::UInt32
end

function nccell_set_bg_rgb8(cl, r, g, b)
    @ccall libnotcurses.nccell_set_bg_rgb8(cl::Ptr{nccell}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

function nccell_set_bg_rgb8_clipped(cl, r, g, b)
    @ccall libnotcurses.nccell_set_bg_rgb8_clipped(cl::Ptr{nccell}, r::Cint, g::Cint, b::Cint)::Cvoid
end

function nccell_set_bg_rgb(c, channel)
    @ccall libnotcurses.nccell_set_bg_rgb(c::Ptr{nccell}, channel::UInt32)::Cint
end

function nccell_set_bg_palindex(cl, idx)
    @ccall libnotcurses.nccell_set_bg_palindex(cl::Ptr{nccell}, idx::Cint)::Cint
end

function nccell_bg_palindex(cl)
    @ccall libnotcurses.nccell_bg_palindex(cl::Ptr{nccell})::UInt32
end

function nccell_fg_default_p(cl)
    @ccall libnotcurses.nccell_fg_default_p(cl::Ptr{nccell})::Bool
end

function nccell_fg_palindex_p(cl)
    @ccall libnotcurses.nccell_fg_palindex_p(cl::Ptr{nccell})::Bool
end

function nccell_bg_default_p(cl)
    @ccall libnotcurses.nccell_bg_default_p(cl::Ptr{nccell})::Bool
end

function nccell_bg_palindex_p(cl)
    @ccall libnotcurses.nccell_bg_palindex_p(cl::Ptr{nccell})::Bool
end

function ncplane_bchannel(n)
    @ccall libnotcurses.ncplane_bchannel(n::Ptr{ncplane})::UInt32
end

function ncplane_fchannel(n)
    @ccall libnotcurses.ncplane_fchannel(n::Ptr{ncplane})::UInt32
end

function ncplane_set_channels(n, channels)
    @ccall libnotcurses.ncplane_set_channels(n::Ptr{ncplane}, channels::UInt64)::Cvoid
end

function ncplane_set_styles(n, stylebits)
    @ccall libnotcurses.ncplane_set_styles(n::Ptr{ncplane}, stylebits::Cuint)::Cvoid
end

function ncplane_on_styles(n, stylebits)
    @ccall libnotcurses.ncplane_on_styles(n::Ptr{ncplane}, stylebits::Cuint)::Cvoid
end

function ncplane_off_styles(n, stylebits)
    @ccall libnotcurses.ncplane_off_styles(n::Ptr{ncplane}, stylebits::Cuint)::Cvoid
end

function ncplane_fg_rgb(n)
    @ccall libnotcurses.ncplane_fg_rgb(n::Ptr{ncplane})::UInt32
end

function ncplane_bg_rgb(n)
    @ccall libnotcurses.ncplane_bg_rgb(n::Ptr{ncplane})::UInt32
end

function ncplane_fg_alpha(n)
    @ccall libnotcurses.ncplane_fg_alpha(n::Ptr{ncplane})::UInt32
end

function ncplane_fg_default_p(n)
    @ccall libnotcurses.ncplane_fg_default_p(n::Ptr{ncplane})::Bool
end

function ncplane_bg_alpha(n)
    @ccall libnotcurses.ncplane_bg_alpha(n::Ptr{ncplane})::UInt32
end

function ncplane_bg_default_p(n)
    @ccall libnotcurses.ncplane_bg_default_p(n::Ptr{ncplane})::Bool
end

function ncplane_fg_rgb8(n, r, g, b)
    @ccall libnotcurses.ncplane_fg_rgb8(n::Ptr{ncplane}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

function ncplane_bg_rgb8(n, r, g, b)
    @ccall libnotcurses.ncplane_bg_rgb8(n::Ptr{ncplane}, r::Ptr{Cuint}, g::Ptr{Cuint}, b::Ptr{Cuint})::UInt32
end

function ncplane_set_fchannel(n, channel)
    @ccall libnotcurses.ncplane_set_fchannel(n::Ptr{ncplane}, channel::UInt32)::UInt64
end

function ncplane_set_bchannel(n, channel)
    @ccall libnotcurses.ncplane_set_bchannel(n::Ptr{ncplane}, channel::UInt32)::UInt64
end

function ncplane_set_fg_rgb8(n, r, g, b)
    @ccall libnotcurses.ncplane_set_fg_rgb8(n::Ptr{ncplane}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

function ncplane_set_bg_rgb8(n, r, g, b)
    @ccall libnotcurses.ncplane_set_bg_rgb8(n::Ptr{ncplane}, r::Cuint, g::Cuint, b::Cuint)::Cint
end

function ncplane_set_bg_rgb8_clipped(n, r, g, b)
    @ccall libnotcurses.ncplane_set_bg_rgb8_clipped(n::Ptr{ncplane}, r::Cint, g::Cint, b::Cint)::Cvoid
end

function ncplane_set_fg_rgb8_clipped(n, r, g, b)
    @ccall libnotcurses.ncplane_set_fg_rgb8_clipped(n::Ptr{ncplane}, r::Cint, g::Cint, b::Cint)::Cvoid
end

function ncplane_set_fg_rgb(n, channel)
    @ccall libnotcurses.ncplane_set_fg_rgb(n::Ptr{ncplane}, channel::UInt32)::Cint
end

function ncplane_set_bg_rgb(n, channel)
    @ccall libnotcurses.ncplane_set_bg_rgb(n::Ptr{ncplane}, channel::UInt32)::Cint
end

function ncplane_set_fg_default(n)
    @ccall libnotcurses.ncplane_set_fg_default(n::Ptr{ncplane})::Cvoid
end

function ncplane_set_bg_default(n)
    @ccall libnotcurses.ncplane_set_bg_default(n::Ptr{ncplane})::Cvoid
end

function ncplane_set_fg_palindex(n, idx)
    @ccall libnotcurses.ncplane_set_fg_palindex(n::Ptr{ncplane}, idx::Cint)::Cint
end

function ncplane_set_bg_palindex(n, idx)
    @ccall libnotcurses.ncplane_set_bg_palindex(n::Ptr{ncplane}, idx::Cint)::Cint
end

function ncplane_set_fg_alpha(n, alpha)
    @ccall libnotcurses.ncplane_set_fg_alpha(n::Ptr{ncplane}, alpha::Cint)::Cint
end

function ncplane_set_bg_alpha(n, alpha)
    @ccall libnotcurses.ncplane_set_bg_alpha(n::Ptr{ncplane}, alpha::Cint)::Cint
end

# typedef int ( * fadecb ) ( struct notcurses * nc , struct ncplane * n , const struct timespec * , void * curry )
const fadecb = Ptr{Cvoid}

function ncplane_fadeout(n, ts, fader, curry)
    @ccall libnotcurses.ncplane_fadeout(n::Ptr{ncplane}, ts::Ptr{Cvoid}, fader::fadecb, curry::Ptr{Cvoid})::Cint
end

function ncplane_fadein(n, ts, fader, curry)
    @ccall libnotcurses.ncplane_fadein(n::Ptr{ncplane}, ts::Ptr{Cvoid}, fader::fadecb, curry::Ptr{Cvoid})::Cint
end

function ncfadectx_setup(n)
    @ccall libnotcurses.ncfadectx_setup(n::Ptr{ncplane})::Ptr{ncfadectx}
end

function ncfadectx_iterations(nctx)
    @ccall libnotcurses.ncfadectx_iterations(nctx::Ptr{ncfadectx})::Cint
end

function ncplane_fadeout_iteration(n, nctx, iter, fader, curry)
    @ccall libnotcurses.ncplane_fadeout_iteration(n::Ptr{ncplane}, nctx::Ptr{ncfadectx}, iter::Cint, fader::fadecb, curry::Ptr{Cvoid})::Cint
end

function ncplane_fadein_iteration(n, nctx, iter, fader, curry)
    @ccall libnotcurses.ncplane_fadein_iteration(n::Ptr{ncplane}, nctx::Ptr{ncfadectx}, iter::Cint, fader::fadecb, curry::Ptr{Cvoid})::Cint
end

function ncplane_pulse(n, ts, fader, curry)
    @ccall libnotcurses.ncplane_pulse(n::Ptr{ncplane}, ts::Ptr{Cvoid}, fader::fadecb, curry::Ptr{Cvoid})::Cint
end

function ncfadectx_free(nctx)
    @ccall libnotcurses.ncfadectx_free(nctx::Ptr{ncfadectx})::Cvoid
end

function nccells_load_box(n, styles, channels, ul, ur, ll, lr, hl, vl, gclusters)
    @ccall libnotcurses.nccells_load_box(n::Ptr{ncplane}, styles::UInt32, channels::UInt64, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hl::Ptr{nccell}, vl::Ptr{nccell}, gclusters::Ptr{Cchar})::Cint
end

function nccells_ascii_box(n, attr, channels, ul, ur, ll, lr, hl, vl)
    @ccall libnotcurses.nccells_ascii_box(n::Ptr{ncplane}, attr::UInt16, channels::UInt64, ul::Ptr{nccell}, ur::Ptr{nccell}, ll::Ptr{nccell}, lr::Ptr{nccell}, hl::Ptr{nccell}, vl::Ptr{nccell})::Cint
end
